--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%; /* 100% = 16 px => 62.5% = 10px */
+  line-height: 1.6rem;
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+h1 {
+  color: brown;
+  background-color: beige;
+  font-size: 4rem;
+  line-height: 6rem;
+  padding: 4rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+  line-height: 3.3rem;
+  width: 358px;
+  margin-right: 4vw;
+}
+
+div {
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
+
+img {
+  width: 53px;
+  height: 53px;
+  border-radius: 8px;
+  margin-right: 16px;
+}
+
+button {
+  padding: 4px 8px;
+  outline: none;
+}
+
+i {
+  margin-top: 4px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+li {
+  padding: 5px 8px;
+  border-radius: 4px;
+  border: 2px solid #0055FF;
+  color: #0055FF;
+  font-size: 1.2rem;
+  margin: 2px;
+}
+
+.job {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3rem 13vw;
+}
+
+.job:nth-child(2n) {
+  background-color: #F0F5FF;
+}
+
+.job-desc {
+  display: flex;
+  align-items: center;
+}
+
+.company {
+  color: #4D4D4D;
+  margin-top: 4px;
+}
+
+.job-location {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+
+
