fix job-tag style

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ a {
 
 h1 {
   color: brown;
-  background-color: beige;
   font-size: 4rem;
   line-height: 6rem;
   padding: 4rem;
@@ -45,7 +44,7 @@ img {
   width: 53px;
   height: 53px;
   border-radius: 8px;
-  margin-right: 16px;
+  margin-right: 1.6vw;
 }
 
 button {
@@ -65,8 +64,6 @@ ul {
 li {
   padding: 5px 8px;
   border-radius: 4px;
-  border: 2px solid #0055FF;
-  color: #0055FF;
   font-size: 1.2rem;
   margin: 2px;
 }
@@ -80,6 +77,11 @@ li {
 
 .job:nth-child(2n) {
   background-color: #F0F5FF;
+}
+
+.job:nth-child(2) li {
+  border: 2px solid #0055FF;
+  color: #0055FF;
 }
 
 .job-desc {
