--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@ h1 {
   font-size: 4rem;
   line-height: 6rem;
   padding: 4rem;
+  display: flex;
+  justify-content: center;
 }
 
 h2 {
@@ -68,18 +70,27 @@ li {
   margin: 2px;
 }
 
+.feature-tag {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #0055FF;
+  background-color: #F0F5FF;
+  padding: 2rem 13vw 0;
+  line-height: 1.5rem;
+}
+
 .job {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3rem 13vw;
+  padding: 2.5rem 13vw;
 }
 
-.job:nth-child(2n) {
+.job:nth-child(2n+1) {
   background-color: #F0F5FF;
 }
 
-.job:nth-child(2) li {
+.job:nth-child(3) li {
   border: 2px solid #0055FF;
   color: #0055FF;
 }
